--- a/index.html
+++ b/index.html
@@ -5,6 +5,7 @@
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
     <title>Surprise Website</title>
     <link rel="stylesheet" href="css/styles.css">
+    <script src="https://cdn.jsdelivr.net/npm/canvas-confetti@1.4.0/dist/confetti.browser.min.js"></script>
 </head>
 <body>
     <div class="container">
@@ -12,7 +13,6 @@
         <div class="box" id="box2">🎁</div>
         <div class="box" id="box3">🎁</div>
     </div>
-    <div class="surprise-text" id="surprise-text"></div>
     <script src="js/scripts.js"></script>
 </body>
 </html>
